--- a/translations/login+intl-icu.de.xlf
+++ b/translations/login+intl-icu.de.xlf
@@ -483,5 +483,29 @@
         <target>Deine E-Mail Adresse wurde geändert. Bitte validiere die neue Adresse, damit du sie verwenden kannst.</target>
       </segment>
     </unit>
+    <unit id="9S9gbqW" name="Die E-Mail ist nicht angekommen?">
+      <segment>
+        <source>Die E-Mail ist nicht angekommen?</source>
+        <target>Die E-Mail ist nicht angekommen?</target>
+      </segment>
+    </unit>
+    <unit id="Tfm3hV." name="Erneut senden!">
+      <segment>
+        <source>Erneut senden!</source>
+        <target>Erneut senden!</target>
+      </segment>
+    </unit>
+    <unit id="ioXUEhL" name="Die Validierungs-Mail wurde erfolgreich gesendet.">
+      <segment>
+        <source>Die Validierungs-Mail wurde erfolgreich gesendet.</source>
+        <target>Die Validierungs-Mail wurde erfolgreich gesendet.</target>
+      </segment>
+    </unit>
+    <unit id="I6yQ0Zq">
+      <segment>
+        <source>Du musst 5 Minuten warten, bevor du eine erneute E-Mail versenden kannst. Bitte prüfe in der Zwischenzeit, ob die Mail möglicherweise in deinem Spam-Ordner gelandet ist.</source>
+        <target>Du musst 5 Minuten warten, bevor du eine erneute E-Mail versenden kannst. Bitte prüfe in der Zwischenzeit, ob die Mail möglicherweise in deinem Spam-Ordner gelandet ist.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
