--- a/translations/login+intl-icu.en.xlf
+++ b/translations/login+intl-icu.en.xlf
@@ -783,5 +783,45 @@
         <target>Your email address has been changed. Please validate it before using it.</target>
       </segment>
     </unit>
+    <unit id="9S9gbqW" name="Die E-Mail ist nicht angekommen?">
+      <notes>
+        <note category="german">Die E-Mail ist nicht angekommen?</note>
+        <note category="from">twig:///templates/ajax/public/validate.html.twig</note>
+      </notes>
+      <segment>
+        <source>Die E-Mail ist nicht angekommen?</source>
+        <target>The mail didn't arrive?</target>
+      </segment>
+    </unit>
+    <unit id="Tfm3hV." name="Erneut senden!">
+      <notes>
+        <note category="german">Erneut senden!</note>
+        <note category="from">twig:///templates/ajax/public/validate.html.twig</note>
+      </notes>
+      <segment>
+        <source>Erneut senden!</source>
+        <target>Resend it!</target>
+      </segment>
+    </unit>
+    <unit id="ioXUEhL" name="Die Validierungs-Mail wurde erfolgreich gesendet.">
+      <notes>
+        <note category="german">Die Validierungs-Mail wurde erfolgreich gesendet.</note>
+        <note category="from">twig:///templates/ajax/public/validate.html.twig</note>
+      </notes>
+      <segment>
+        <source>Die Validierungs-Mail wurde erfolgreich gesendet.</source>
+        <target>The validation mail has been send successfully.</target>
+      </segment>
+    </unit>
+    <unit id="I6yQ0Zq">
+      <notes>
+        <note category="german">Du musst 5 Minuten warten, bevor du eine erneute E-Mail versenden kannst. Bitte prüfe in der Zwischenzeit, ob die Mail möglicherweise in deinem Spam-Ordner gelandet ist.</note>
+        <note category="from">twig:///templates/scripts/errors/profile.txt.twig</note>
+      </notes>
+      <segment>
+        <source>Du musst 5 Minuten warten, bevor du eine erneute E-Mail versenden kannst. Bitte prüfe in der Zwischenzeit, ob die Mail möglicherweise in deinem Spam-Ordner gelandet ist.</source>
+        <target>You have to wait at least 5 minutes before re-sending the validation mail. Please double-check your spam folder in the meantime.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
