--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22565,5 +22565,45 @@ cette violente opération...]]></target>
         <target>L'assaut a également touché nos objets de défense ! Nous en avons perdu {num} au total : {list}</target>
       </segment>
     </unit>
+    <unit id="zYCe3Qk" name="vor wenigen Augenblicken">
+      <notes>
+        <note category="german">vor wenigen Augenblicken</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+      </notes>
+      <segment>
+        <source>vor wenigen Augenblicken</source>
+        <target>il y a un instant</target>
+      </segment>
+    </unit>
+    <unit id="_VLdCGZ" name="heute morgen um {H}:{i}">
+      <notes>
+        <note category="german">heute morgen um {H}:{i}</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+      </notes>
+      <segment>
+        <source>heute morgen um {H}:{i}</source>
+        <target>ce matin, à {H}:{i}</target>
+      </segment>
+    </unit>
+    <unit id="9GBymDW" name="heute nachmittag um {H}:{i}">
+      <notes>
+        <note category="german">heute nachmittag um {H}:{i}</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+      </notes>
+      <segment>
+        <source>heute nachmittag um {H}:{i}</source>
+        <target>cet après-midi, à {H}:{i}</target>
+      </segment>
+    </unit>
+    <unit id="nw_7pSY" name="gestern um {H}:{i}">
+      <notes>
+        <note category="german">gestern um {H}:{i}</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+      </notes>
+      <segment>
+        <source>gestern um {H}:{i}</source>
+        <target>hier à {H}:{i}</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
