--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5731,5 +5731,11 @@
         <target><![CDATA[Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}<strong>Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.</strong>]]></target>
       </segment>
     </unit>
+    <unit id="1mv8jxQ">
+      <segment>
+        <source>Dieser Gegenstand ist &lt;strong class="red"&gt;kaputt&lt;/strong&gt;. Du kannst ihn zur Zeit nicht gebrauchen. Vielleicht findest du in der Stadt eine gütige Seele, der ihn reparieren kann?</source>
+        <target><![CDATA[Dieser Gegenstand ist <strong class="red">kaputt</strong>. Du kannst ihn zur Zeit nicht gebrauchen. Vielleicht findest du in der Stadt eine gütige Seele, der ihn reparieren kann?]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
