--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9229,5 +9229,15 @@
         <target><![CDATA[Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}<strong>Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.</strong>]]></target>
       </segment>
     </unit>
+    <unit id="1mv8jxQ">
+      <notes>
+        <note category="german">Dieser Gegenstand ist &lt;strong class="red"&gt;kaputt&lt;/strong&gt;. Du kannst ihn zur Zeit nicht gebrauchen. Vielleicht findest du in der Stadt eine gütige Seele, der ihn reparieren kann?</note>
+        <note category="from">twig:///templates/ajax/game/actions.html.twig</note>
+      </notes>
+      <segment>
+        <source>Dieser Gegenstand ist &lt;strong class="red"&gt;kaputt&lt;/strong&gt;. Du kannst ihn zur Zeit nicht gebrauchen. Vielleicht findest du in der Stadt eine gütige Seele, der ihn reparieren kann?</source>
+        <target><![CDATA[Cet objet est <strong class="red">cassé</strong>, vous ne pouvez donc plus l'utilisier pour le moment ! Peut être qu'une âme généreuse en ville pourrait vous le réparer ?]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
