FR Translation for old distinctions

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3882,7 +3882,7 @@
       </notes>
       <segment>
         <source>Alte Auszeichnungen</source>
-        <target>Alte Auszeichnungen</target>
+        <target>Anciennes distinctions</target>
       </segment>
     </unit>
   </file>
