--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3661,7 +3661,7 @@
       </notes>
       <segment>
         <source>Das Zombie Survival Game!</source>
-        <target>le jeu de survie dans un monde peuplé de zombies !</target>
+        <target>Le jeu de survie dans un monde peuplé de zombies !</target>
       </segment>
     </unit>
     <unit id="RZid5J_" name="Details">
@@ -3672,7 +3672,7 @@
       </notes>
       <segment>
         <source>Details</source>
-        <target>Details</target>
+        <target>Détails</target>
       </segment>
     </unit>
     <unit id="yqSnrUg" name="Zusätzliche Informationen zu deiner Meldung (optional):">
@@ -3683,7 +3683,7 @@
       </notes>
       <segment>
         <source>Zusätzliche Informationen zu deiner Meldung (optional):</source>
-        <target>Zusätzliche Informationen zu deiner Meldung (optional):</target>
+        <target>Informations supplémentaires sur le signalement (facultatif):</target>
       </segment>
     </unit>
   </file>
