--- a/translations/login+intl-icu.es.xlf
+++ b/translations/login+intl-icu.es.xlf
@@ -796,7 +796,7 @@
       </notes>
       <segment>
         <source>Die E-Mail ist nicht angekommen?</source>
-        <target>Die E-Mail ist nicht angekommen?</target>
+        <target>¿No recibiste el correo electrónico?</target>
       </segment>
     </unit>
     <unit id="Tfm3hV." name="Erneut senden!">
@@ -807,7 +807,7 @@
       </notes>
       <segment>
         <source>Erneut senden!</source>
-        <target>Erneut senden!</target>
+        <target>¡Enviar de nuevo!</target>
       </segment>
     </unit>
     <unit id="ioXUEhL" name="Die Validierungs-Mail wurde erfolgreich gesendet.">
@@ -818,7 +818,7 @@
       </notes>
       <segment>
         <source>Die Validierungs-Mail wurde erfolgreich gesendet.</source>
-        <target>Die Validierungs-Mail wurde erfolgreich gesendet.</target>
+        <target>El correo electrónico de validación se envió correctamente.</target>
       </segment>
     </unit>
     <unit id="I6yQ0Zq">
@@ -829,7 +829,7 @@
       </notes>
       <segment>
         <source>Du musst 5 Minuten warten, bevor du eine erneute E-Mail versenden kannst. Bitte prüfe in der Zwischenzeit, ob die Mail möglicherweise in deinem Spam-Ordner gelandet ist.</source>
-        <target>Du musst 5 Minuten warten, bevor du eine erneute E-Mail versenden kannst. Bitte prüfe in der Zwischenzeit, ob die Mail möglicherweise in deinem Spam-Ordner gelandet ist.</target>
+        <target>Tienes que esperar 5 minutos antes de poder enviar otro correo electrónico. Mientras tanto, compruebe si es posible que el correo haya terminado en su carpeta de correo no deseado.</target>
       </segment>
     </unit>
   </file>
