--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9239,5 +9239,36 @@
         <target><![CDATA[Cet objet est <strong class="red">cassé</strong>, vous ne pouvez donc plus l'utilisier pour le moment ! Peut être qu'une âme généreuse en ville pourrait vous le réparer ?]]></target>
       </segment>
     </unit>
+    <unit id="nPNoAvx">
+      <notes>
+        <note category="german">Du zermahlst den Inhalt von {items_consume} auf dem Tisch und mischst ihn mit allem, was dir in die Hände fällt... und lässt ihn dann ziehen.</note>
+        <note category="from">db://ItemAction</note>
+      </notes>
+      <segment>
+        <source>Du zermahlst den Inhalt von {items_consume} auf dem Tisch und mischst ihn mit allem, was dir in die Hände fällt... und lässt ihn dann ziehen.</source>
+        <target>Vous broyez le contenu de {items_consume} sur votre table et vous le mélangez avec tout ce qui vous passe sous la main... Vous laissez infuser le tout.</target>
+      </segment>
+    </unit>
+    <unit id="qeC3d4b" name="Ein überragender Erfolg: Du hast {items_spawn} erhalten!">
+      <notes>
+        <note category="german">Ein überragender Erfolg: Du hast {items_spawn} erhalten!</note>
+        <note category="from">db://AffectMessage</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Ein überragender Erfolg: Du hast {items_spawn} erhalten!</source>
+        <target>C'est un immense succès : Vous avez obtenu {items_spawn} !</target>
+      </segment>
+    </unit>
+    <unit id="RvnC1X2">
+      <notes>
+        <note category="german">Der verdächtige Rauch, der aus der Mischung austritt, deutet darauf hin, dass &lt;strong&gt;nicht alles so gelaufen ist wie geplant&lt;/strong&gt;. Du hast eine zufällige Droge erhalten: {items_spawn}</note>
+        <note category="from">db://AffectMessage</note>
+      </notes>
+      <segment>
+        <source>Der verdächtige Rauch, der aus der Mischung austritt, deutet darauf hin, dass &lt;strong&gt;nicht alles so gelaufen ist wie geplant&lt;/strong&gt;. Du hast eine zufällige Droge erhalten: {items_spawn}</source>
+        <target><![CDATA[La fumée suspecte qui s'échappe laisse à penser que <strong>ça ne se passe pas comme vous l'aviez prévu</strong> ! Vous obtenez une drogue aléatoire : {items_spawn}]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
