--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -3409,7 +3409,7 @@
       </notes>
       <segment>
         <source>Du hast eine {items_consume} in dein/e/n {item_from} gefüllt und {item_to} erhalten!</source>
-        <target>Vous avez rempli un {items_consume} dans votre {item_from} et reçu {item_to} !</target>
+        <target>Vous avez obtenu {item_to} en combinant {items_consume} et {item_from}.</target>
       </segment>
     </unit>
     <unit id="vDhaMLU" name="Öffnen">
